css/style.css
@font-face {
    font-family: 'Gill Sans MT Pro';
    src: url('../fonts/GillSans/GillSansMTPro-Medium.eot');
    src: local('Gill Sans MT Pro Medium'), local('GillSansMTPro-Medium'),
    url('../fonts/GillSans/GillSansMTPro-Medium.eot?#iefix') format('embedded-opentype'),
    url('../fonts/GillSans/GillSansMTPro-Medium.woff2') format('woff2'),
    url('../fonts/GillSans/GillSansMTPro-Medium.woff') format('woff'),
    url('../fonts/GillSans/GillSansMTPro-Medium.ttf') format('truetype'),
    url('../fonts/GillSans/GillSansMTPro-Medium.svg#GillSansMTPro-Medium') format('svg');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Gill Sans MT Pro';
    src: url('../fonts/GillSans/GillSansMTPro-Bold.eot');
    src: local('Gill Sans MT Pro Bold'), local('GillSansMTPro-Bold'),
    url('../fonts/GillSans/GillSansMTPro-Bold.eot?#iefix') format('embedded-opentype'),
    url('../fonts/GillSans/GillSansMTPro-Bold.woff2') format('woff2'),
    url('../fonts/GillSans/GillSansMTPro-Bold.woff') format('woff'),
    url('../fonts/GillSans/GillSansMTPro-Bold.ttf') format('truetype'),
    url('../fonts/GillSans/GillSansMTPro-Bold.svg#GillSansMTPro-Bold') format('svg');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Gill Sans MT Pro';
    src: url('../fonts/GillSans/GillSansMTPro-ExtraBold.eot');
    src: local('Gill Sans MT Pro ExtraBold'), local('GillSansMTPro-ExtraBold'),
    url('../fonts/GillSans/GillSansMTPro-ExtraBold.eot?#iefix') format('embedded-opentype'),
    url('../fonts/GillSans/GillSansMTPro-ExtraBold.woff2') format('woff2'),
    url('../fonts/GillSans/GillSansMTPro-ExtraBold.woff') format('woff'),
    url('../fonts/GillSans/GillSansMTPro-ExtraBold.ttf') format('truetype'),
    url('../fonts/GillSans/GillSansMTPro-ExtraBold.svg#GillSansMTPro-ExtraBold') format('svg');
    font-weight: 800;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Gill Sans MT Pro';
    src: url('../fonts/GillSans/GillSansMTPro-Light.eot');
    src: local('Gill Sans MT Pro Light'), local('GillSansMTPro-Light'),
    url('../fonts/GillSans/GillSansMTPro-Light.eot?#iefix') format('embedded-opentype'),
    url('../fonts/GillSans/GillSansMTPro-Light.woff2') format('woff2'),
    url('../fonts/GillSans/GillSansMTPro-Light.woff') format('woff'),
    url('../fonts/GillSans/GillSansMTPro-Light.ttf') format('truetype'),
    url('../fonts/GillSans/GillSansMTPro-Light.svg#GillSansMTPro-Light') format('svg');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

:root {
    --offwhite: #E3E2DF;
    --burgundy: #5D001E;
    --pink: #E3AFBC;
    --magenta :#9A1750
}

body {
    margin: 0;
    height: 100vh;
    overflow: hidden !important;
    font-family: "Gill Sans MT Pro", helvetica, sans-serif !important;
}

.full_v {
    height: 100vh;
    width: 100vw;
    position: absolute;
}

.full_p {
    height: 100%;
    width: 100%;
}

.bg {
    background-color: var(--offwhite);
    position: fixed;
}

.fullheight_v {
    height: 100vh !important;
    /*position: absolute;*/
}

.fullwidth_v {
    width: 100vw !important;
}

.fullwidth_p {
    width: 100% !important;
}

.map_bg {
    background-color: var(--burgundy);
}

.map_container {
    width: 40vw;
    height: 100vh !important;
    /*min-width: 400px;*/
    align-items: center;
    justify-content: center;
    display: flex;
}

.map {
    width: 80%;
    height: 70%;
    align-items: center;
    justify-content: center;
    display: flex;
}

.map_svg {
    width: 100%;
    height: 100%;
    pointer-events:none;
}

.map_svg .jqvmap-region {
    stroke: var(--burgundy);
    stroke-width: 5px;
    stroke-opacity: 100%;
    fill: var(--offwhite);
    fill-opacity: 90%;
    pointer-events:auto;
}

.map_svg:hover .jqvmap-region {
    fill-opacity: 50%;
}

.map_svg .jqvmap-region:hover {
    fill-opacity: 90% !important;
}

.jqvmap-label {
    position: absolute;
    display: none;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    background: #292929;
    color: white;
    /*font-family: sans-serif, Verdana;*/
    font-size: smaller;
    padding: 3px;
    pointer-events:none;
}

.jqvmap-region {
    cursor: pointer;
}

.logo {
    font-size: 24px;
    font-weight: 800;
    position: absolute;
    opacity: 80%;
    left: 35px;
    top: 35px;
}

.burgundy-text {
    color: var(--burgundy);
}

.white-text {
    color: var(--offwhite);
}

.onerightcontainter {
    position: relative;
}

.oneright {
    display: block;
    position: absolute;
    /*margin: 35px 50px 35px 55px;*/
    margin: 3.5vw 4vw 3.5vw 4vw;
    height: auto;
    bottom:0;
    top:0;
    left:0;
    right:0;
}

.flexrow,
.flexrow_parent > div {
    display: flex;
    flex-flow: row;
    width: 100%;
}

.flexcolumn {
    display: flex;
    flex-flow: column;
}

.flexleft,
.flexnone {
    flex: none;
}

.flexright,
.flex1 {
    flex: 1;
}

.flex2 {
    flex: 2;
}

.flex3 {
    flex: 3;
}

.flex4 {
    flex: 4;
}

.stat {
    /*background-color: cadetblue;*/
    height: fit-content;
    /*margin: 0 0 10px 0;*/
    padding: 0 1.5vw 0 1.5vw;
    color: var(--burgundy);
    border-left: solid var(--burgundy) 2px;
    /*min-width: 100px;*/
}

.stat_title {
    font-size: 1.2vw;
    font-weight: 300;
    white-space: nowrap;
}

.stat_value {
    font-size: 2vw;
    font-weight: bold;
}

.hist_label {
    font-size: 14px;
    font-weight: 100;
    white-space: nowrap;
    color: var(--burgundy);
    position: relative;
}

.hist_labels {
    align-items: center;
    justify-content: center;
    width: 45px;
}

.hist_label_text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#line_chart_slider {
    position: relative;
}

#onerighttop {
    /*background-color: coral;*/
    margin-bottom: 2.5vw;
}

#onerightmiddle {
    /*background-color: aqua;*/
    /*border: solid var(--burgundy) 1px;*/
    margin-bottom: 2.5vw;
}

#onerightbottom {
    /*background-color: darkorchid;*/
    /*border: solid var(--burgundy) 1px;*/
}

.center_parent {
    position: relative;
}

.content_sec {
    height: 85vh;
    width: 50vw;
}

.center_box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.content_title {
    /*margin-top: 10px;*/
    margin-bottom: 0.5vh;
    font-size: 3.8vh;
    font-weight: bold;
    color: var(--burgundy);
}

.content_subtitle {
    /*margin-top: 5px;*/
    font-size: 2.3vh;
    font-weight: 100;
    color: var(--burgundy);
}

.content_titles {
    margin-bottom: 3vh;
}

.content_middle {
    margin-top: 6vh;
    margin-bottom: 6vh;
}

#fp-nav {
    right: 15px !important;
}

#fp-nav ul li {
    width: auto;
    height: 40px !important;
    margin: 8px 0 8px 0 !important;
}

#fp-nav ul li a.active span,
#fp-nav ul li:hover a.active span{
    height: 40px !important;
    width: 4px !important;
    border-radius: 0 !important;
    margin: -20px 0 0 0 !important;
    background: var(--burgundy);
    border: solid var(--burgundy) 1px;
    opacity: 70%;
}

#fp-nav ul li a span {
    border-radius: 0 !important;
    height: 40px !important;
    width: 4px !important;
    margin: -20px 0 0 0 !important;
    background: none;
    border: solid var(--burgundy) 1px;
    opacity: 70%;
}

#fp-nav ul li .fp-tooltip {
    line-height: 40px;
    font-size: 18px;
    color: var(--burgundy);
}

#fp-nav ul li .fp-tooltip {
    right: 10px !important;
}

.line {
    fill: none;
    stroke: var(--magenta);
    stroke-width: 1.5;
}

.line1 {
    stroke: var(--magenta);
}

.line2 {
    stroke: var(--pink);
}

.tick {
    color: var(--burgundy);
    font-weight: 100;
    /*visibility: hidden;*/
}

.domain {
    stroke-width: 3px;
    stroke-opacity: 0.3;
    /*opacity: 0.3;*/
}

.chart_title {
    font-size: 16px;
    fill: var(--burgundy);
}

.overlay {
    fill: none;
    pointer-events: all;
}
.dot {
    fill: #ffab00;
    stroke: #fff;
}

.focus circle {
    fill: none;
    stroke: steelblue;
}

.frame {
    border: solid magenta 1px;
}

.bar {
    fill: var(--burgundy) !important;
}

.block_bg {
    background-color: #789875;
}

